# rsparse

./: .gitignore  CITATION.cff  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: data.rs  lib.rs
tests/: basic_tests.rs  primary_routines.rs  primary_tests.rs  save_load_tests.rs  solver_tests.rs  utils.rs
tests/assets/: allsol_1.sprs  cholsol_1.sprs  cholsol_7.sprs  lusol_3.sprs  lusol_4.sprs  lusol_6.sprs  qrsol_5.sprs  qrsol_9.sprs
