[package]
name = "rsparse"
version = "0.2.2"
authors = ["Ricard Lado"]

description = "A Rust library for solving sparse linear systems using direct methods."
categories = ["mathematics", "science"]
keywords = ["math", "linear", "algebra", "sparse", "matrix"]
license = "MIT"
repository = "https://github.com/rlado/rsparse"
readme = "README.md"
edition = "2021"
exclude = [".github/",]

[lib]
name = "rsparse"
path = "src/lib.rs"

[dependencies]
